--- a/style.css
+++ b/style.css
@@ -1,10 +1,16 @@
 .clearfix {
   overflow: auto;
 }
+h1 {
+margin-left: 50%;
+font-family: sans-serif;
+color: gray;
+text-shadow: 2px 2px orange;
+}
 
 #grid {
   width: 80%;
-
+  margin-left: 20%;
 }
 
 .tile {
@@ -21,6 +27,7 @@
   width: 60%;
   background-color: gray;
   border: 2px solid black;
+  margin-left: 30%;
 }
 
 .colors {
